--- a/dropdownwithmodal.html
+++ b/dropdownwithmodal.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load staticfiles  %}
     <meta charset="UTF-8">
     <title></title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <!--<link rel="stylesheet" type="text/css" href="{% static 'login/style.css' %}" />-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
@@ -202,7 +204,7 @@
 <div class="container-fluid">
   <div class="row">
 		<div class="col-lg-6">
-		<h3 style="text-align:center;background-color:blue;"> BEFORE POWER DOWN </h3>
+		<h3 style="text-align:center;background-color:#232121;color:white;"> BEFORE POWER DOWN </h3>
 		  <pre>
 
                                     Windows IP Configuration
@@ -240,7 +242,7 @@
 
 		</div>
 		<div class="col-lg-6">
-		<h3 style="text-align:center;background-color:blue;"> AFTER POWER DOWN </h3>
+		<h3 style="text-align:center;background-color:#232121;color:white;"> AFTER POWER DOWN </h3>
 		  <pre>
 
                                     Windows IP Configuration
